<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.freak_stuff.solarprofit.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/werwerw"
                android:layout_width="217dp"
                android:layout_height="42dp"
                android:text="@string/Solar_Panels_power_W"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                />

            <EditText
                android:id="@+id/solarpower"
                android:layout_width="135dp"
                android:layout_height="43dp"
                android:ems="10"
                android:inputType="number"
                android:text="1000"
                tools:text="100" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="217dp"
                android:layout_height="42dp"
                android:text="@string/Home_self_usage_kW"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                />

            <EditText
                android:id="@+id/homepower"
                android:layout_width="135dp"
                android:layout_height="43dp"
                android:ems="10"
                android:inputType="number"
                android:text="150" />



        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <CheckBox
                android:id="@+id/mpptcheck"
                style="@android:style/Widget.DeviceDefault.Light.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:checked="false"
                android:text="@string/MPPT_solar_controller" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/Calculate"
                android:textAlignment="center" />

        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
