<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/settlines"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="5dp"
            android:prompt="@string/country_prompt"
            android:entries="@array/country_arrays"
            />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView

                android:layout_width="217dp"
                android:layout_height="42dp"
                android:text="@string/Electricy_tariff_forkW"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                />

            <EditText
                android:id="@+id/local_electric_tarif"
                android:layout_width="85dp"
                android:layout_height="43dp"
                android:inputType="numberDecimal"
                android:text="0.062" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="$"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                />



        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
>

            <TextView
                android:layout_width="217dp"
                android:layout_height="42dp"
                android:text="@string/Feed_in_tariff_for_kW"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                />

            <EditText
                android:id="@+id/local_green_tarif"
                android:layout_width="85dp"
                android:layout_height="43dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="0.21" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="$"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                />



        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="217dp"
                android:layout_height="42dp"
                android:text="@string/Youre_country_tax"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                />

            <EditText
                android:id="@+id/local_taxes"
                android:layout_width="85dp"
                android:layout_height="43dp"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="18" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="%"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                />



        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/buttonsave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/Save"
                android:textAlignment="center" />

        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>