<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <TextView
                android:id="@+id/textVie2w2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Station_Rating"
                android:layout_centerInParent="true"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                android:layout_above="@id/ratingBar"
                android:textStyle="bold" />
            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:numStars="6"
                android:layout_marginBottom="10dp"
                android:rating="2" />
        </RelativeLayout>



            <include layout="@layout/table_data" />

            <TextView
                android:id="@+id/text3View2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/Production_of_energy_by_one_month_in_kW"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart1"
                android:layout_width="fill_parent"
                android:layout_height="400dp"
             />

            <TextView
                android:id="@+id/text4View2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:text="@string/Production_of_energy_by_one_day_in_kW"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/chart2"
                android:layout_width="fill_parent"
                android:layout_height="400dp" />

            <include layout="@layout/table_battery" />


        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>